application-aws/torcal-ml/torcal-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torcal-ml
  namespace: torcal-ml
spec:
  selector:
    matchLabels:
      app: torcal-ml
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: torcal-ml
        monitoring: "enabled"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: torcal-ml-sa
      containers:
        - name: torcal-ml
          image: 651857781455.dkr.ecr.eu-west-1.amazonaws.com/torcal-ml:latest@sha256:08ca95cd1bfb1870e548d63854fb02f8147c18302197f4337a51026947da606d
          volumeMounts:
            - name: env-config
              mountPath: /app/.env
              subPath: .env
          resources:
            limits:
              memory: "8Gi"
              cpu: "2000m"
            requests:
              memory: "6Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8000
              name: http
            - containerPort: 8001
              name: metrics
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: env-config
          configMap:
            name: torcal-ml-env-config
